replace the call clazz.newInstance() with clazz.getDeclaredConstructor().newInstance()